--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -18,3 +18,11 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+#springdoc:
+#  api-docs:
+#    enabled: true
+#    path: /v3/api-docs
+#  swagger-ui:
+#    enabled: true
+##    path: /swagger-ui.html
