Generate Docker Image of account-service with Dockerfile

--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.shadril238</groupId>
 	<artifactId>account-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>  <!-- Packaging type -->
 	<name>account-service</name>
 	<description>Microservice for Account Service</description>
 	<url/>
