Reading configurations using ConfigurationProperties and Spring Boot Profiles

--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -19,6 +19,14 @@ spring:
       ddl-auto: update
     show-sql: true
 
+  config:
+    import:
+      - "application_qa.yml"
+      - "application_prod.yml"
+  profiles:
+    active:
+      - "qa"
+
 #springdoc:
 #  api-docs:
 #    enabled: true
@@ -28,4 +36,13 @@ spring:
 ##    path: /swagger-ui.html
 
 build:
-  version: "1.0"
+  version: "3.0"
+
+accounts:
+  message: "Welcome to EazyBank accounts related local APIs "
+  contactDetails:
+    name: "shadril238"
+    email: "shadril238@eazybank.com"
+  onCallSupport:
+    - (555) 555-1234
+    - (555) 523-1345
