--- a/card-service/src/main/resources/application.yml
+++ b/card-service/src/main/resources/application.yml
@@ -15,3 +15,22 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  config:
+    import:
+      - "application_qa.yml"
+      - "application_prod.yml"
+  profiles:
+    active:
+      - "qa"
+
+build:
+  version: "3.0"
+
+cards:
+  message: "Welcome to EazyBank cards related local APIs "
+  contactDetails:
+    name: "shadril238"
+    email: "shadril238@eazybank.com"
+  onCallSupport:
+    - (555) 555-1234
+    - (555) 523-1345
