--- a/loan-service/pom.xml
+++ b/loan-service/pom.xml
@@ -94,6 +94,17 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <!-- CLI Command : mvn compile jib:dockerBuild -->
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.2.1</version>
+                <configuration>
+                    <to>
+                        <image>shadril238/${project.artifactId}:s5</image>
+                    </to>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
