Update Microservice to read properties form Config Server

--- a/config-server/src/main/resources/config/loans-prod.yml
+++ b/config-server/src/main/resources/config/loans-prod.yml
@@ -1,13 +1,8 @@
-spring:
-  config:
-    activate:
-      on-profile: "prod"
-
 build:
   version: "1.0"
 
-accounts:
-  message: "Welcome to EazyBank accounts related prod APIs "
+loans:
+  message: "Welcome to EazyBank loans related prod APIs "
   contactDetails:
     name: "Reine Aishwarya - Product Owner"
     email: "aishwarya@eazybank.com"
