--- a/config-server/src/main/resources/config/loans-qa.yml
+++ b/config-server/src/main/resources/config/loans-qa.yml
@@ -1,13 +1,8 @@
-spring:
-  config:
-    activate:
-      on-profile: "qa"
-
 build:
   version: "2.0"
 
-accounts:
-  message: "Welcome to EazyBank accounts related QA APIs "
+loans:
+  message: "Welcome to EazyBank loans related QA APIs "
   contactDetails:
     name: "Smitha Ray - QA Lead"
     email: "smitha@eazybank.com"
