Reading configurations from a file system location

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
         config:
             server:
                 native:
-                    searchLocations: "classpath:/config"
+#                    searchLocations: "classpath:/config"
+                    searchLocations: "file:///home//bs00545//Desktop//spring-boot-microservices//config"  # Path to the directory where the configuration files are stored
 server:
     port: 8071
