--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -2,12 +2,19 @@ spring:
     application:
         name: "config-server"
     profiles:
-        active: native
+#        active: native
+        active: git
     cloud:
         config:
             server:
-                native:
+#                native:
 #                    search-locations: "classpath:/config"
-                    search-locations: "file:///home//bs00545//Desktop//spring-boot-microservices//config"  # Path to the directory where the configuration files are stored
+#                    search-locations: "file:///home//bs00545//Desktop//spring-boot-microservices//config"  # Path to the directory where the configuration files are stored
+                git:
+                    uri: "https://github.com/shadril238/spring-boot-microservices-eazybank-config.git"
+                    default-label: "main"
+                    timeout: 5
+                    clone-on-start: true
+                    force-pull: true
 server:
     port: 8071
