--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -16,5 +16,9 @@ spring:
                     timeout: 5
                     clone-on-start: true
                     force-pull: true
+
+encrypt:
+  key: "mySecretKeyShadril238"
+
 server:
     port: 8071
