--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -23,6 +23,24 @@ spring:
     username: "guest"
     password: "guest"
 
+management:
+  endpoints:
+    web:
+    exposure:
+      include: "*"
+
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
+      enabled: true
+
+  endpoint:
+    health:
+      probes:
+        enabled: true
+
+
 encrypt:
   key: "mySecretKeyShadril238"
 
