--- a/card-service/src/main/resources/application.yml
+++ b/card-service/src/main/resources/application.yml
@@ -31,3 +31,28 @@ management:
     web:
       exposure:
         include: "*"
+  endpoint:
+    shutdown:
+      enabled: true
+  info:
+    env:
+      enabled: true
+
+endpoints:
+  shutdown:
+    enabled: true
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+  service-url:
+    defaultZone: http://localhost:8761/eureka/
+
+info:
+  app:
+    name: "cards"
+    description: "Cards Service for EazyBank"
+    version: "1.0.0"
