Updated project SRS

--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -68,6 +68,17 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<!-- CLI Command : mvn compile jib:dockerBuild -->
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.3.2</version>
+				<configuration>
+					<to>
+						<image>shadril238/${project.artifactId}:s8</image>
+					</to>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
