Implementing Cross cutting concerns Tracing Logging using Gateway

--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -69,3 +69,9 @@ info:
     name: "accounts"
     description: "Accounts Service for EazyBank"
     version: "1.0.0"
+
+logging:
+  level:
+    com:
+      shadril238:
+        accounts: DEBUG
