--- a/card-service/src/main/resources/application.yml
+++ b/card-service/src/main/resources/application.yml
@@ -68,3 +68,9 @@ info:
     name: "cards"
     description: "Cards Service for EazyBank"
     version: "1.0.0"
+
+logging:
+  level:
+    com:
+      shadril238:
+        cards: DEBUG
