--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -27,8 +27,8 @@ info:
     description: "EazyBank Gateway Server Application"
     version: "1.0.0"
 
-#logging:
-#  level:
-#    com:
-#      eazybytes:
-#        gatewayserver: DEBUG
+logging:
+  level:
+    com:
+      shadril238:
+        gateway_server: DEBUG
