--- a/loan-service/src/main/resources/application.yml
+++ b/loan-service/src/main/resources/application.yml
@@ -69,3 +69,9 @@ info:
     name: "loans"
     description: "Loans Service for EazyBank"
     version: "1.0.0"
+
+logging:
+  level:
+    com:
+      shadril238:
+        loans: DEBUG
